static class AnimatorParams
{
    // Player animator params
    public const string DirectionX = "DirectionX";
    public const string DirectionY = "DirectionY";
    public const string Speed = "Speed";
    public const string IsPlayingLyre = "IsPlayingLyre";
    public const string IsAttacking = "IsAttacking";
    public const string IsAOEAttacking = "IsAOEAttacking";
    // Enemy animator params
    public const string IsMoving = "IsMoving";
    public const string IsDead = "IsDead";
}
